--- a/backend/Locale/pl_PL/LC_MESSAGES/messages.po
+++ b/backend/Locale/pl_PL/LC_MESSAGES/messages.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2024-03-10 17:27+0100\n"
-"PO-Revision-Date: 2024-03-10 18:25+0100\n"
+"PO-Revision-Date: 2024-03-10 20:30+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: pl\n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
