--- a/backend/Locale/en_US/LC_MESSAGES/messages.po
+++ b/backend/Locale/en_US/LC_MESSAGES/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2024-03-10 18:40+0100\n"
-"PO-Revision-Date: 2024-03-10 20:30+0100\n"
+"PO-Revision-Date: 2024-03-10 21:54+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en_US\n"
@@ -35,3 +35,15 @@ msgstr "won"
 
 msgid "Dołącz"
 msgstr "Join"
+
+msgid "czerwony"
+msgstr "red"
+
+msgid "niebieski"
+msgstr "blue"
+
+msgid "zielony"
+msgstr "green"
+
+msgid "żółty"
+msgstr "yellow"
