--- a/backend/Locale/pl_PL/LC_MESSAGES/messages.po
+++ b/backend/Locale/pl_PL/LC_MESSAGES/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2024-03-10 17:27+0100\n"
-"PO-Revision-Date: 2024-03-10 20:30+0100\n"
+"PO-Revision-Date: 2024-03-10 21:55+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pl_PL\n"
@@ -35,3 +35,15 @@ msgstr "wygrał"
 
 msgid "Join"
 msgstr "Dołącz"
+
+msgid "red"
+msgstr "czerwony"
+
+msgid "blue"
+msgstr "niebieski"
+
+msgid "green"
+msgstr "zielony"
+
+msgid "yellow"
+msgstr "żółty"
